package com.gb.rental.model.account;

public enum AccountStatus {
    ACTIVE,
    CLOSED,
    BLOCKED,
    BLACKLISTED
}
