package com.gb.rental.model.account;

public enum AccountType {
    USER,
    ADMIN,
    DRIVER
}
