package com.gb.rental.model.account;

public enum LicenseType {
    MCWG,
    MC,
    LMW,
    HMW,
    INTERNATIONALMC,
    INTERNATIONALMCWG,
    INTERNATIONALLMW,
    INTERNATIONALHMW
}
